style.css
@keyframes fadeinall {
    0% {
      opacity: 1; }
    97% {
      opacity: 0; }
    98% {
      opacity: 0;
      -webkit-transform: translateY(0);
      transform: translateY(0); }
    100% {
      opacity: 0;
      -webkit-transform: translateY(-100%);
      transform: translateY(-100%);
      z-index: -1; } }

.menu-bar {
  padding: 0px;
}

.navbar-nav {
  margin: 10px 30px 10px auto !important;
  justify-content: right;
}

.nav-item {
  margin: 20px;
}

.navbar-brand {
  margin: 0px 0px 0px 0px !important;
}

body {
  width: 90%;
  margin: auto;
}

.menu-search-bar {
  width: 200px;
  border-radius: 50px;
  margin: 0px 0px 0px 0px !important;
}

footer {
  background-color: black;
  color: white;
  padding: 150px 100px;
}

.med-section-titles {
  margin-bottom: 20px;
}

.copyright-line {
  margin: 50px 10px;
  display: flex;
  justify-content: center;
}

